Changed SalaryPackaging.Contract to SalaryPackaging.Business.Contract

--- a/SalaryPackaging.Business/SalaryPackaging.Business.csproj
+++ b/SalaryPackaging.Business/SalaryPackaging.Business.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SalaryPackaging.Common\SalaryPackaging.Common.csproj" />
-    <ProjectReference Include="..\SalaryPackaging.Contract\SalaryPackaging.Business.Contract.csproj" />
+    <ProjectReference Include="..\SalaryPackaging.Business.Contract\SalaryPackaging.Business.Contract.csproj" />
     <ProjectReference Include="..\SalaryPackaging.Core\SalaryPackaging.Core.csproj" />
   </ItemGroup>
 
