--- a/SalaryPackaging.Startup/SalaryPackaging.Startup.csproj
+++ b/SalaryPackaging.Startup/SalaryPackaging.Startup.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SalaryPackaging.Business\SalaryPackaging.Business.csproj" />
     <ProjectReference Include="..\SalaryPackaging.Common\SalaryPackaging.Common.csproj" />
-    <ProjectReference Include="..\SalaryPackaging.Contract\SalaryPackaging.Business.Contract.csproj" />
+    <ProjectReference Include="..\SalaryPackaging.Business.Contract\SalaryPackaging.Business.Contract.csproj" />
     <ProjectReference Include="..\SalaryPackaging.Core\SalaryPackaging.Core.csproj" />
     <ProjectReference Include="..\SalaryPackaging.Service.Contract\SalaryPackaging.Service.Contract.csproj" />
     <ProjectReference Include="..\SalaryPackaging.Service\SalaryPackaging.Service.csproj" />
